==> ghi-electronics/TinyCLR-Ports/Targets/LPC23xx_LPC24xx/LPC24_GPIO.cpp <==
#include "LPC24.h"
#define SCS_BASE (*(volatile unsigned long *)0xE01FC1A0)
#define GPIO_BASE 0xE0028000
#define IO0IntStatR_OFFSET 0x84
#define IO0IntStatF_OFFSET 0x88
#define IO0IntClr_OFFSET 0x8C
#define IO0IntEnR_OFFSET 0x90
#define IO0IntEnF_OFFSET 0x94
#define PCB_BASE 0xE002C000
#define PINSEL0 (*(volatile unsigned long *)0xE002C000)
#define PINSEL0_OFFSET 0x0
#define PINMODE0 (*(volatile unsigned long *)0xE002C040)
#define PINMODE0_OFFSET 0x40
#define FIO_BASE 0x3FFFC000
#define FIO0DIR (*(volatile unsigned long *)0x3FFFC000)
#define FIO0DIR_OFFSET 0x0
#define FIO0PIN (*(volatile unsigned long *)0x3FFFC014)
#define FIO0PIN_OFFSET 0x14
#define FIO0PIN0 (*(volatile unsigned char *)0x3FFFC014)
#define FIO0PIN0_OFFSET 0x14
#define FIO0SET (*(volatile unsigned long *)0x3FFFC018)
#define FIO0SET_OFFSET 0x18
#define FIO0SET0 (*(volatile unsigned char *)0x3FFFC018)
#define FIO0SET0_OFFSET 0x18
#define FIO0CLR (*(volatile unsigned long *)0x3FFFC01C)
#define FIO0CLR_OFFSET 0x1C
#define GET_PORT(pin)                       (pin / 32)
#define GET_PIN(pin)                        (pin % 32)
#define GET_PIN_MASK(pin)                   (1<<(pin % 32))
#define SET_PINSEL_ALTERNATE_0(port, pin)   *((volatile uint32_t *)(PCB_BASE+PINSEL0_OFFSET  + (2*port+((pin>>4) != 0))*0x4)) &= ~(3u<<((2*pin)&0x1F))

const TinyCLR_Api_Info* LPC24_Gpio_GetApi() {
    gpioProvider.ApiInfo = &gpioApi;
    gpioProvider.Acquire = &LPC24_Gpio_Acquire;
    gpioProvider.Release = &LPC24_Gpio_Release;
    gpioProvider.AcquirePin = &LPC24_Gpio_AcquirePin;
    gpioProvider.ReleasePin = &LPC24_Gpio_ReleasePin;
    gpioProvider.IsDriveModeSupported = &LPC24_Gpio_IsDriveModeSupported;
    gpioProvider.Read = &LPC24_Gpio_Read;
    gpioProvider.Write = &LPC24_Gpio_Write;
    gpioProvider.GetDriveMode = &LPC24_Gpio_GetDriveMode;
    gpioProvider.SetDriveMode = &LPC24_Gpio_SetDriveMode;
    gpioProvider.GetDebounceTimeout = &LPC24_Gpio_GetDebounceTimeout;
    gpioProvider.SetDebounceTimeout = &LPC24_Gpio_SetDebounceTimeout;
    gpioProvider.SetValueChangedHandler = &LPC24_Gpio_SetValueChangedHandler;
    gpioProvider.GetPinCount = &LPC24_Gpio_GetPinCount;
    gpioProvider.GetControllerCount = &LPC24_Gpio_GetControllerCount;

    gpioApi.Author = "GHI Electronics, LLC";
    gpioApi.Name = "GHIElectronics.TinyCLR.NativeApis.LPC24.GpioProvider";
    gpioApi.Type = TinyCLR_Api_Type::GpioProvider;
    gpioApi.Version = 0;
    gpioApi.Implementation = &gpioProvider;

    return &gpioApi;
}

TinyCLR_Result LPC24_Gpio_Acquire(const TinyCLR_Gpio_Controller* self) {
    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC24_Gpio_Release(const TinyCLR_Gpio_Controller* self) {
    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC24_Gpio_SetValueChangedHandler(const TinyCLR_Gpio_Controller* self, int32_t pin, TinyCLR_Gpio_ValueChangedHandler ISR) {
    LPC24_Int_State* state = &g_int_state[pin];

    DISABLE_INTERRUPTS_SCOPED(irq);

    uint32_t port = GET_PORT(pin);
    uint32_t pinMask = GET_PIN_MASK(pin);

    if (ISR && ((port != 0) && (port != 2))) // If interrupt is called on a non interrupt capable pin return false
        return TinyCLR_Result::ArgumentInvalid;

    LPC24_Gpio_EnableInputPin(pin, g_pinDriveMode[pin]);

    auto gpioController = 0; //TODO Temporary set to 0

    if (ISR) {
        state->controller = &gpioProvider;
        state->pin = (uint8_t)pin;
        state->debounce = LPC24_Gpio_GetDebounceTimeout(self, gpioController, pin);
        state->ISR = ISR;
        state->lastDebounceTicks = LPC24_Time_GetTimeForProcessorTicks(nullptr, LPC24_Time_GetCurrentProcessorTicks(nullptr));

        SET_PIN_INTERRUPT_RISING_EDGE(GET_PORT(pin), GET_PIN(pin));
        SET_PIN_INTERRUPT_FALLING_EDGE(GET_PORT(pin), GET_PIN(pin));

        LPC24_Interrupt_Activate(LPC24XX_VIC::c_IRQ_INDEX_EINT3, (uint32_t*)&LPC24_Gpio_InterruptHandler, 0);
    }
    else {
        DISABLE_PIN_INTERRUPT_RISING_EDGE(GET_PORT(pin), GET_PIN(pin));
        DISABLE_PIN_INTERRUPT_FALLING_EDGE(GET_PORT(pin), GET_PIN(pin));

        LPC24_Interrupt_Disable(LPC24XX_VIC::c_IRQ_INDEX_EINT3);
    }

    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC24_Gpio_Read(const TinyCLR_Gpio_Controller* self, int32_t pin, TinyCLR_Gpio_PinValue& value) {
    if (pin >= LPC24_Gpio_MaxPins || pin < 0)
        return TinyCLR_Result::ArgumentOutOfRange;

    value = LPC24_Gpio_ReadPin(pin) ? TinyCLR_Gpio_PinValue::High : TinyCLR_Gpio_PinValue::Low;

    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC24_Gpio_Write(const TinyCLR_Gpio_Controller* self, int32_t pin, TinyCLR_Gpio_PinValue value) {
    if (pin >= LPC24_Gpio_MaxPins || pin < 0)
        return TinyCLR_Result::ArgumentOutOfRange;

    LPC24_Gpio_WritePin(pin, value == TinyCLR_Gpio_PinValue::High ? true : false);

    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC24_Gpio_AcquirePin(const TinyCLR_Gpio_Controller* self, int32_t pin) {

    DISABLE_INTERRUPTS_SCOPED(irq);

    if (pin >= LPC24_Gpio_MaxPins || pin < 0)
        return TinyCLR_Result::ArgumentOutOfRange;

    if (!LPC24_Gpio_OpenPin(pin))
        return TinyCLR_Result::SharingViolation;

    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC24_Gpio_ReleasePin(const TinyCLR_Gpio_Controller* self, int32_t pin) {

    DISABLE_INTERRUPTS_SCOPED(irq);

    if (pin >= LPC24_Gpio_MaxPins || pin < 0)
        return TinyCLR_Result::ArgumentOutOfRange;

    LPC24_Gpio_ClosePin(pin);

    return TinyCLR_Result::Success;
}

bool LPC24_Gpio_IsDriveModeSupported(const TinyCLR_Gpio_Controller* self, int32_t pin, TinyCLR_Gpio_PinDriveMode mode) {

    switch (mode) {
    case TinyCLR_Gpio_PinDriveMode::Output:
    case TinyCLR_Gpio_PinDriveMode::Input:
    case TinyCLR_Gpio_PinDriveMode::InputPullUp:
    case TinyCLR_Gpio_PinDriveMode::InputPullDown:
        return true;
    }

    return false;
}

TinyCLR_Gpio_PinDriveMode LPC24_Gpio_GetDriveMode(const TinyCLR_Gpio_Controller* self, int32_t pin) {
    return g_pinDriveMode[pin];
}

TinyCLR_Result LPC24_Gpio_SetDriveMode(const TinyCLR_Gpio_Controller* self, int32_t pin, TinyCLR_Gpio_PinDriveMode driveMode) {
    if (pin >= LPC24_Gpio_MaxPins || pin < 0)
        return TinyCLR_Result::ArgumentOutOfRange;

    switch (driveMode) {
    case TinyCLR_Gpio_PinDriveMode::Output:
        LPC24_Gpio_ConfigurePin(pin, LPC24_Gpio_Direction::Output, LPC24_Gpio_PinFunction::PinFunction0, LPC24_Gpio_PinMode::Inactive);
        break;

    case TinyCLR_Gpio_PinDriveMode::Input:
        LPC24_Gpio_ConfigurePin(pin, LPC24_Gpio_Direction::Input, LPC24_Gpio_PinFunction::PinFunction0, LPC24_Gpio_PinMode::Inactive);
        break;

    case TinyCLR_Gpio_PinDriveMode::InputPullUp:
        LPC24_Gpio_ConfigurePin(pin, LPC24_Gpio_Direction::Input, LPC24_Gpio_PinFunction::PinFunction0, LPC24_Gpio_PinMode::PullUp);
        break;

    case TinyCLR_Gpio_PinDriveMode::InputPullDown:
        LPC24_Gpio_ConfigurePin(pin, LPC24_Gpio_Direction::Input, LPC24_Gpio_PinFunction::PinFunction0, LPC24_Gpio_PinMode::PullDown);
        break;

    case TinyCLR_Gpio_PinDriveMode::OutputOpenDrain:
    case TinyCLR_Gpio_PinDriveMode::OutputOpenDrainPullUp:
    case TinyCLR_Gpio_PinDriveMode::OutputOpenSource:
    case TinyCLR_Gpio_PinDriveMode::OutputOpenSourcePullDown:
    default:
        return  TinyCLR_Result::NotSupported;
    }

    g_pinDriveMode[pin] = driveMode;

    return TinyCLR_Result::Success;
}

uint64_t LPC24_Gpio_GetDebounceTimeout(const TinyCLR_Gpio_Controller* self, int32_t pin) {
    return g_debounceTicksPin[pin];
}

TinyCLR_Result LPC24_Gpio_SetDebounceTimeout(const TinyCLR_Gpio_Controller* self, int32_t pin, uint64_t debounceTicks) {
    g_debounceTicksPin[pin] = debounceTicks;

    return TinyCLR_Result::Success;
}

int32_t LPC24_Gpio_GetPinCount(const TinyCLR_Gpio_Controller* self) {
    return LPC24_Gpio_MaxPins;
}

void LPC24_Gpio_Reset() {
    SCS_BASE |= (1 << 0); // Enable for port 0 and 1

    auto gpioController = 0; //TODO Temporary set to 0

    for (auto pin = 0; pin < LPC24_Gpio_GetPinCount(&gpioProvider, gpioController); pin++) {
        auto& p = g_lpc24_pins[pin];

        g_pinReserved[pin] = false;
        LPC24_Gpio_SetDebounceTimeout(&gpioProvider, gpioController, pin, LPC24_Gpio_DebounceDefaultTicks);

        if (p.apply) {
            LPC24_Gpio_ConfigurePin(pin, p.pinDirection, p.pinFunction, p.pinMode);

            if (p.pinDirection == LPC24_Gpio_Direction::Output)
                LPC24_Gpio_WritePin(pin, p.outputDirection);
        }
    }
}

TinyCLR_Result LPC24_Gpio_GetControllerCount(const TinyCLR_Gpio_Controller* self, int32_t& count) {
    count = 1;

    return TinyCLR_Result::Success;
}
